--- a/_pages/stories.html
+++ b/_pages/stories.html
@@ -111,7 +111,10 @@ layout: stories_layout
     
 }
   
-   
+if(window.location.hash) {
+  var tag = window.location.hash.split('#')[1];
+  filter(tag);
+}
 
   function setActiveTag(tag) {
     // loop through all items and remove active class
