close #183 make call me form with form spree

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Prolike
     {% include components/primary.html
     btn_href="#why"
     btn_txt="But why?"
-    btn_href-call="#"
+    btn_href-call="/callme/"
     btn_txt-call="Call Me"
     title="Home Of The Yipees"
     caption="Where Young Independent Professionals
@@ -26,7 +26,7 @@ title: Prolike
     {% include components/primary.html
     btn_href="#how"
     btn_txt="But how?"
-    btn_href-call="#"
+    btn_href-call="/callme/"
     btn_txt-call="Call Me"
     title="Reinventing The Master/Apprentice Workplace"
     caption="Offering a practicum to the yipees, we run a frank and transparent business, teaching the
@@ -41,7 +41,7 @@ title: Prolike
     {% include components/primary.html
     btn_href="#what"
     btn_txt="But what?"
-    btn_href-call="#"
+    btn_href-call="/callme/"
     btn_txt-call="call me"
     title="Quality Is Built In - Not Glued On"
     caption="The digital transformation is real: Our deliveries are serverless, programmable
@@ -57,7 +57,7 @@ title: Prolike
     {% include components/primary.html
     btn_href="/gigs/"
     btn_txt="Show me"
-    btn_href-call="#"
+    btn_href-call="/callme/"
     btn_txt-call="call me"
     title="Come And JAM With Us"
     caption="Most of our work is done on serveless JAM stacks. We impersonate the <em>gig economy</em>. All our
