Added mailto link on call me page

--- a/_pages/callme.html
+++ b/_pages/callme.html
@@ -27,7 +27,7 @@ layout: callme
                 <span class="info-text">
                     <h2>Prolike</h2>
                     <p>Allerød Stationsvej 4, 3450 Allerød</p>
-                    <a href="hey@prolike.io" data-proofer-ignore>hey@prolike.io</a>
+                    <a href="mailto:hey@prolike.io" data-proofer-ignore>hey@prolike.io</a>
                     <br>
                     <a href="tel:+4520872530" data-proofer-ignore>20 87 25 30</a>
                 </span>
