close #206 clean up fronpage text

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ title: Prolike
     btn_href-call="/callme/"
     btn_txt-call="Call Me"
     title="Reinventing The Master/Apprentice Workplace"
-    caption="Offering a practicum to the yipees, we run a frank and transparent business, teaching the
-    yipees the ins and outs of being a professional consultant,
+    caption="Offering a practicum to the Yipees, we run a frank and transparent business, teaching the
+    Yipees the ins and outs of being a professional consultant,
     freelancer, innovator or entrepreneur"
     %}
   </div>
@@ -46,8 +46,8 @@ title: Prolike
     title="Quality Is Built In - Not Glued On"
     caption="The digital transformation is real: Our deliveries are serverless, programmable
     and immutable. We provide a collaborative technology stack and
-    work through a simple Kanban approach. Elders are constantly backing and mentoring the yipees. We only invouce when
-    we create value - we call it <em>lean</em> "
+    work through a simple Kanban approach. Elders are constantly backing and mentoring the Yipees. We only invoice when
+    we create value - we call it <em>lean</em>"
     %}
   </div>
 
@@ -62,8 +62,8 @@ title: Prolike
     title="Come And JAM With Us"
     caption="Most of our work is done on serveless JAM stacks. We impersonate the <em>gig economy</em>. All our
     projects are described as gigs. Are you a
-    yipee waiting to join or a customer waiting to come
-    clean - go and be inspired. <a href='#contact' data-proofer-ignore>Join our tribe!</a>"
+    Yipee waiting to join or a customer waiting to come
+    clean? Go and be inspired. Join our tribe!"
     %}
   </div>
 
