close #210 rework footer setup

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@ title: Prolike
 
   <!-- Contact section -->
 
-  <div class="section contact">
-    {% include components/contact.html
+  <div class="section footer">
+    {% include components/footer.html
     title="Let's get in touch!"
     caption="Ready to start your next project with us?</br>
     ...or are you a yipee - who want to get onboard?</br>
