--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@ title: Prolike
     {% include components/primary.html
     btn_href="#why"
     btn_txt="But why?"
+    btn_id="ga-why"
     btn_href-call="/callme/"
     btn_txt-call="Call Me"
+    btn_id_call="ga-call-home"
     title="Home Of The Yipees"
     caption="Where Young Independent Professionals
     collaborate to deliver quality
@@ -26,6 +28,8 @@ title: Prolike
     {% include components/primary.html
     btn_href="#how"
     btn_txt="But how?"
+    btn_id="ga-how"
+    btn_id_call="ga-call-why"
     btn_href-call="/callme/"
     btn_txt-call="Call Me"
     title="Reinventing The Master/Apprentice Workplace"
@@ -39,6 +43,8 @@ title: Prolike
 
   <div class="section">
     {% include components/primary.html
+    btn_id="ga-what"
+    btn_id_call="ga-call-how"
     btn_href="#what"
     btn_txt="But what?"
     btn_href-call="/callme/"
@@ -55,6 +61,8 @@ title: Prolike
 
   <div class="section">
     {% include components/primary.html
+    btn_id="ga-showme"
+    btn_id_call="ga-call-what"
     btn_href="/gigs/"
     btn_txt="Show me"
     btn_href-call="/callme/"
