close #224 add button to flow page on front side

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ title: Prolike
     btn_txt="But how?"
     btn_id="ga-how"
     btn_id_call="ga-call-why"
-    btn_href-call="/callme/"
-    btn_txt-call="Call Me"
+    btn_href-call="/flow/"
+    btn_txt-call="See our workflow"
     title="Reinventing The Master/Apprentice Workplace"
     caption="Offering a practicum to the Yipees, we run a frank and transparent business, teaching the
     Yipees the ins and outs of being a professional consultant,
