close #225 fix icons

--- a/_pages/flow.html
+++ b/_pages/flow.html
@@ -19,7 +19,7 @@ layout: callme
     <section class="slide slide2">
         <div class="row justify-content-center">
             <div class="col-6">
-                <i class="fas fa-hammer fa-5x"></i>
+                <i class="fas fa-hammer fa-5x flowIcon"></i>
             </div>
         </div>
         <div class="row justify-content-center">
@@ -34,7 +34,7 @@ layout: callme
     <section class="slide slide3">
         <div class="row justify-content-center">
             <div class="col-lg-6 col-sm-8">
-                <i class="fas fa-border-style fa-5x"></i>
+                <i class="fas fa-border-style fa-5x flowIcon"></i>
                 <h1 id="order">Order</h1>
                 <p id="orderInfo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
             </div>
@@ -45,7 +45,7 @@ layout: callme
     <section class="slide slide4">
         <div class="row justify-content-center">
             <div class="col-lg-6 col-sm-8">
-                <i class="fas fa-handshake fa-5x"></i>
+                <i class="fas fa-handshake fa-5x flowIcon"></i>
                 <h1 id="agreement">Agreement</h1>
                 <p id="agreementInfo">Deal! Now we can start working on your product</p>
             </div>
@@ -56,7 +56,7 @@ layout: callme
     <section class="slide slide5">
         <div class="row justify-content-center">
             <div class="col-lg-6 col-sm-8">
-                <i class="fas fa-birthday-cake fa-5x"></i>
+                <i class="fas fa-birthday-cake fa-5x flowIcon"></i>
                 <h1 id="mvp">MVP</h1>
                 <p id="min">Minimum Viable Product</p>
                 <p id="txt">Instead of building your entire product in one go we start with the fundementals and add features in following releases</p>
@@ -69,7 +69,7 @@ layout: callme
     <section class="slide slide6">
         <div class="row justify-content-center">
             <div class="col-lg-6 col-sm-8">
-                <i class="fas fa-glass-cheers fa-5x"></i>
+                <i class="fas fa-glass-cheers fa-5x flowIcon"></i>
                 <h1 id="fr">First release</h1>
                 <p id="frTxt">Our first release! Packed with extra features bringing your product to the next level</p>
             </div>
@@ -80,7 +80,7 @@ layout: callme
     <section class="slide slide7">
         <div class="row justify-content-center">
             <div class="col-lg-6 col-sm-8">
-                <i class="fas fa-infinity fa-5x"></i>
+                <i class="fas fa-infinity fa-5x flowIcon"></i>
                 <h1 id="sr">Second release</h1>
                 <p id="srTxt">Our second release! Don't worry this doesnt have to be the end.<br> We will continue delivering releases til we have all the freatures you want</p>
             </div>
