close #227 implement google forms page

--- a/_pages/flow.html
+++ b/_pages/flow.html
@@ -18,12 +18,8 @@ layout: callme
     <div id="trigger2"></div>
     <section class="slide slide2">
         <div class="row justify-content-center">
-            <div class="col-6">
-                <i class="fas fa-hammer fa-5x flowIcon"></i>
-            </div>
-        </div>
-        <div class="row justify-content-center">
             <div class="col-lg-6 col-sm-8">
+                <i class="fas fa-hammer fa-5x flowIcon"></i>
                 <h1 id="workshop">Workshops</h1>
                 <p id="workshopInfo">Let's sit down and talk about what you need and how your app should look</p>
             </div>
@@ -83,6 +79,19 @@ layout: callme
                 <i class="fas fa-infinity fa-5x flowIcon"></i>
                 <h1 id="sr">Second release</h1>
                 <p id="srTxt">Our second release! Don't worry this doesnt have to be the end.<br> We will continue delivering releases til we have all the freatures you want</p>
+            </div>
+        </div>
+    </section>
+
+    <div id="trigger8"></div>
+    <section class="slide slide8">
+        <div class="row justify-content-center">
+            <div class="col-lg-6 col-sm-8">
+                <i class="fas fa-infinity fa-5x flowIcon"></i>
+                <h1 id="form">Continue</h1>
+                <a href="/form" class="btn formbtn">
+                <p>Continue to our form</p>
+                </a>
             </div>
         </div>
     </section>
