--- a/_pages/flow.html
+++ b/_pages/flow.html
@@ -6,9 +6,9 @@ layout: callme
 <div class="container-fluid slide-container">
 
     <div id="trigger1"></div>
-    <section class="slide slide1">
+    <section class="slide">
         <div class="row justify-content-center">
-            <div class="col-lg-8 col-sm-8">
+            <div class="col-lg-8 col-xs-8 slide1">
                 <h1 id="workflow">Our workflow <span id="you">with you</span></h1>
                 <p id="scroll">Scroll down to begin</p>
             </div>
@@ -16,9 +16,9 @@ layout: callme
     </section>
 
     <div id="trigger2"></div>
-    <section class="slide slide2">
+    <section class="slide">
         <div class="row justify-content-center">
-            <div class="col-lg-6 col-sm-8">
+            <div class="col-lg-6 col-xs-8 slide2">
                 <i class="fas fa-hammer fa-5x flowIcon"></i>
                 <h1 id="workshop">Workshops</h1>
                 <p id="workshopInfo">Let's sit down and talk about what you need and how your app should look</p>
@@ -27,9 +27,9 @@ layout: callme
     </section>
 
     <div id="trigger3"></div>
-    <section class="slide slide3">
+    <section class="slide ">
         <div class="row justify-content-center">
-            <div class="col-lg-6 col-sm-8">
+            <div class="col-lg-6 col-xs-8 slide3">
                 <i class="fas fa-border-style fa-5x flowIcon"></i>
                 <h1 id="order">Order</h1>
                 <p id="orderInfo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
@@ -38,9 +38,9 @@ layout: callme
     </section>
 
     <div id="trigger4"></div>
-    <section class="slide slide4">
+    <section class="slide ">
         <div class="row justify-content-center">
-            <div class="col-lg-6 col-sm-8">
+            <div class="col-lg-6 col-xs-8 slide4">
                 <i class="fas fa-handshake fa-5x flowIcon"></i>
                 <h1 id="agreement">Agreement</h1>
                 <p id="agreementInfo">Deal! Now we can start working on your product</p>
@@ -49,9 +49,9 @@ layout: callme
     </section>
 
     <div id="trigger5"></div>
-    <section class="slide slide5">
+    <section class="slide">
         <div class="row justify-content-center">
-            <div class="col-lg-6 col-sm-8">
+            <div class="col-lg-6 col-xs-8 slide5">
                 <i class="fas fa-birthday-cake fa-5x flowIcon"></i>
                 <h1 id="mvp">MVP</h1>
                 <p id="min">Minimum Viable Product</p>
@@ -62,9 +62,9 @@ layout: callme
     </section>
 
     <div id="trigger6"></div>
-    <section class="slide slide6">
+    <section class="slide">
         <div class="row justify-content-center">
-            <div class="col-lg-6 col-sm-8">
+            <div class="col-lg-6 col-xs-8 slide6">
                 <i class="fas fa-glass-cheers fa-5x flowIcon"></i>
                 <h1 id="fr">First release</h1>
                 <p id="frTxt">Our first release! Packed with extra features bringing your product to the next level</p>
@@ -73,9 +73,9 @@ layout: callme
     </section>
 
     <div id="trigger7"></div>
-    <section class="slide slide7">
+    <section class="slide">
         <div class="row justify-content-center">
-            <div class="col-lg-6 col-sm-8">
+            <div class="col-lg-6 col-xs-8 slide7">
                 <i class="fas fa-infinity fa-5x flowIcon"></i>
                 <h1 id="sr">Second release</h1>
                 <p id="srTxt">Our second release! Don't worry this doesnt have to be the end.<br> We will continue delivering releases til we have all the freatures you want</p>
@@ -84,12 +84,12 @@ layout: callme
     </section>
 
     <div id="trigger8"></div>
-    <section class="slide slide8">
+    <section class="slide">
         <div class="row justify-content-center">
-            <div class="col-lg-6 col-sm-8">
+            <div class="col-lg-6 col-xs-8 slide8">
                 <i class="fas fa-infinity fa-5x flowIcon"></i>
                 <h1 id="form">Continue</h1>
-                <a href="/form" class="btn formbtn">
+                <a href="/form/" class="btn formbtn">
                     <p>Continue to our form</p>
                 </a>
             </div>
