close #240 change button link

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ title: Prolike
     {% include components/primary.html
     btn_id="ga-showme"
     btn_id_call="ga-call-what"
-    btn_href="/gigs/"
+    btn_href="/flow/"
     btn_txt="Show me"
     btn_href-call="/callme/"
     btn_txt-call="call me"
