--- a/_pages/form.html
+++ b/_pages/form.html
@@ -2,6 +2,6 @@
 title: Form
 layout: callme
 ---
-<div class="container-fluid" style="padding-top:80px;" >
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd-7bnFnbGJKKorUR1otR1qwrqz2emGCya65LEN63BZz0T1FQ/viewform?embedded=true" style="height:88vh; width:100%; overflow:hidden; overflow-y:scroll;" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<div class="container-fluid">
+    <iframe class="ourGoogleForm" src="https://docs.google.com/forms/d/e/1FAIpQLSd-7bnFnbGJKKorUR1otR1qwrqz2emGCya65LEN63BZz0T1FQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </div>
