close #247 write a blogpost about our 50k workflow

--- a/_pages/flow.html
+++ b/_pages/flow.html
@@ -30,9 +30,10 @@ layout: callme
     <section class="slide ">
         <div class="row justify-content-center">
             <div class="col-lg-6 col-xs-8 slide3">
-                <i class="fas fa-border-style fa-5x flowIcon"></i>
-                <h1 id="order">Order</h1>
-                <p id="orderInfo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                <i class="fas fa-envelope-open-text fa-5x flowIcon"></i>
+                <h1 id="order">Offer</h1>
+                <p id="orderInfo">We'll send you an offer,
+                    <br>based on what we learned at the workshop</p>
             </div>
         </div>
     </section>
