--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ title: Prolike
     btn_href="#why"
     btn_txt="But why?"
     btn_id="ga-why"
-    btn_href-call="/infographics/"
-    btn_txt-call="See how"
+    btn_href-call="/stories/"
+    btn_txt-call="Read our stories"
     btn_id_call="ga-call-home"
     title="Home Of The Yipees"
     caption="Where Young Independent Professionals
@@ -30,8 +30,8 @@ title: Prolike
     btn_txt="But how?"
     btn_id="ga-how"
     btn_id_call="ga-call-why"
-    btn_href-call="/bootcamp/"
-    btn_txt-call="bootcamp"
+    btn_href-call="/flow/"
+    btn_txt-call="watch our flow"
     title="Reinventing The Master/Apprentice Workplace"
     caption="Offering a practicum to the Yipees, we run a frank and transparent business, teaching the
     Yipees the ins and outs of being a professional consultant,
@@ -47,8 +47,8 @@ title: Prolike
     btn_id_call="ga-call-how"
     btn_href="#what"
     btn_txt="But what?"
-    btn_href-call="/services/"
-    btn_txt-call="services"
+    btn_href-call="/bootcamp/"
+    btn_txt-call="try our bootcamp"
     title="Quality Is Built In - Not Glued On"
     caption="The digital transformation is real: Our deliveries are serverless, programmable
     and immutable. We provide a collaborative technology stack and
@@ -63,10 +63,10 @@ title: Prolike
     {% include components/primary.html
     btn_id="ga-showme"
     btn_id_call="ga-call-what"
-    btn_href="/form/"
+    btn_href="/callme/"
     btn_txt="Contact us"
-    btn_href-call="/callme/"
-    btn_txt-call="call me"
+    btn_href-call="/services/"
+    btn_txt-call="Get our services"
     title="Come And JAM With Us"
     caption="Most of our work is done on serveless JAM stacks. We impersonate the <em>gig economy</em>. All our
     projects are described as gigs. Are you a
