close #244 fix google form styling

--- a/_pages/website-form.html
+++ b/_pages/website-form.html
@@ -1,9 +1,7 @@
 ---
----
 layout: page
 title: Website form
 ---
-<div class="container-fluid">
-<iframe class="ourGoogleForm" src="https://docs.google.com/forms/d/e/1FAIpQLSeF7TVK_AC1eqKwHEieoPgVGhOTeu8Qrm0lD1bYHZq5nTiNvA/viewform?embedded=true" width="640" height="2630" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-
+<div class="container-fluid ourGoogleFormContainer">
+    <iframe class="ourGoogleForm" src="https://docs.google.com/forms/d/e/1FAIpQLSeF7TVK_AC1eqKwHEieoPgVGhOTeu8Qrm0lD1bYHZq5nTiNvA/viewform?embedded=true" width="640" height="2630" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading…</iframe>
 </div>
