--- a/_pages/form.html
+++ b/_pages/form.html
@@ -1,7 +1,7 @@
 ---
-title: Form
-layout: callme
+layout: page
+title: Website form
 ---
-<div class="container-fluid">
-    <iframe class="ourGoogleForm" src="https://docs.google.com/forms/d/e/1FAIpQLSd-7bnFnbGJKKorUR1otR1qwrqz2emGCya65LEN63BZz0T1FQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<div class="container-fluid ourGoogleFormContainer">
+    <iframe class="ourGoogleForm" src="https://docs.google.com/forms/d/e/1FAIpQLSd-7bnFnbGJKKorUR1otR1qwrqz2emGCya65LEN63BZz0T1FQ/viewform?embedded=true" width="640" height="2444" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading…</iframe>
 </div>
