close #251 read through the new blogpost about software

--- a/_pages/flow.html
+++ b/_pages/flow.html
@@ -56,7 +56,8 @@ layout: callme
                 <i class="fas fa-birthday-cake fa-5x flowIcon"></i>
                 <h1 id="mvp">MVP</h1>
                 <p id="min">Minimum Viable Product</p>
-                <p id="txt">Instead of building your entire product in one go we start with the fundementals and add features in following releases</p>
+                <p id="txt">Instead of building your entire product in one go we start with the fundementals and add
+                    features in following releases</p>
                 <p id="txt2">This ensures that you get up an running as quick as possible</p>
             </div>
         </div>
@@ -79,7 +80,8 @@ layout: callme
             <div class="col-lg-6 col-xs-8 slide7">
                 <i class="fas fa-infinity fa-5x flowIcon"></i>
                 <h1 id="sr">Second release</h1>
-                <p id="srTxt">Our second release! Don't worry this doesnt have to be the end.<br> We will continue delivering releases til we have all the freatures you want</p>
+                <p id="srTxt">Our second release! Don't worry this doesnt have to be the end.<br> We will continue
+                    delivering releases til we have all the freatures you want</p>
             </div>
         </div>
     </section>
@@ -96,4 +98,5 @@ layout: callme
             </div>
         </div>
     </section>
+    
 </div>
