close #255 flow animation skipping

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Prolike
 
   <!-- Home section -->
 
-  <div class="section">
+  <div class="section front">
     {% include components/primary.html
     btn_href="#why"
     btn_txt="But why?"
@@ -24,7 +24,7 @@ title: Prolike
 
   <!-- Why section -->
 
-  <div class="section">
+  <div class="section front">
     {% include components/primary.html
     btn_href="#how"
     btn_txt="But how?"
@@ -41,7 +41,7 @@ title: Prolike
 
   <!-- How section -->
 
-  <div class="section">
+  <div class="section front">
     {% include components/primary.html
     btn_id="ga-what"
     btn_id_call="ga-call-how"
@@ -59,7 +59,7 @@ title: Prolike
 
   <!-- What section -->
 
-  <div class="section">
+  <div class="section front">
     {% include components/primary.html
     btn_id="ga-showme"
     btn_id_call="ga-call-what"
@@ -77,7 +77,7 @@ title: Prolike
 
   <!-- Contact section -->
 
-  <div class="section footer">
+  <div class="section front footer">
     {% include components/footer.html
     title="Let's get in touch!"
     caption="Ready to start your next project with us?</br>
