--- a/_pages/offlineprojects.html
+++ b/_pages/offlineprojects.html
@@ -66,14 +66,6 @@ layout: page
             <div class="col-12 zenhub">
                     <p class="box-title">Zenhub</p>
                     <a href="#">View Zenhub Board</a>
-                <!-- <div class="row">
-                    <div class="offset-1 col-10">
-                        <div class="align-middle" style="">
-                            <p class="box-title">Zenhub</p>
-                            <a href="#">View Zenhub Board</a>
-                        </div>
-                    </div>
-                </div> -->
             </div>
         </div>
 
@@ -81,6 +73,7 @@ layout: page
 
         <div class="col-lg-8 col-xs-12 pipeline">
             <div class="col-12">
+                <p>All issues in To Do:</p>
                 <div class="pipeline-box"></div>
             </div>
         </div>
