close #273 generic navigation

--- a/_pages/bootcamp.html
+++ b/_pages/bootcamp.html
@@ -1,6 +1,8 @@
 ---
-title: Bootcamp - Prolike
+title: Bootcamp
 layout: page
+navigation: true
+order: 1
 ---
 <div class="bootcamp">
     <section class="intro">
