--- a/_pages/anything.html
+++ b/_pages/anything.html
@@ -1,6 +1,8 @@
 ---
 title:  Anything
-layout: stories_layout
+layout: anythings
+navigation: true
+order: 2
 ---
 
 <div class="blog-tags-list row">
