--- a/_pages/anything.html
+++ b/_pages/anything.html
@@ -1,12 +1,12 @@
 ---
-title:  Anything
+title: Anything
 layout: anythings
 navigation: true
 order: 2
 ---
 
 <div class="blog-tags-list row">
-  <div class="col-lg-5 m-auto">
+  <div class="tags-row col-lg-5 m-auto">
     {% assign sorted_tags = site.tags | sort %}
     {% for tag in sorted_tags %}
     {% assign t = tag | first %}
@@ -27,12 +27,12 @@ order: 2
     </a>
     <div class="card-body">
       <div class="posts-tags">
-      {% for tag in post.tags %}
-      <div class="blog-tag-item" style="display: inline-block" id="{{ t }}-item">
-        <a class="tags" href="#{{ tag }}" onclick="filter('{{ tag }}'); " data-proofer-ignore>{{ tag }}</a>
+        {% for tag in post.tags %}
+        <div class="blog-tag-item" style="display: inline-block" id="{{ t }}-item">
+          <a class="tags" href="#{{ tag }}" onclick="filter('{{ tag }}'); " data-proofer-ignore>{{ tag }}</a>
+        </div>
+        {% endfor %}
       </div>
-      {% endfor %}
-    </div>
       <a href="{{ post.url }}">
         <h5 class="card-title">{{ post.title }}</h5>
       </a>
