close #332 general styling and minor improvements

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ title: Prolike
 
   <!-- Contact section -->
 
-  <div class="section front footer">
+  <div class="section">
     {% include components/footer.html
     title="Let's get in touch!"
     caption="Ready to start your next project with us?</br>
