--- a/_pages/profeed-signup.html
+++ b/_pages/profeed-signup.html
@@ -3,7 +3,7 @@ layout: page
 ---
 
 <!-- Begin Mailchimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css/" rel="stylesheet" type="text/css" data-proofer-ignore>
 <div id="mc_embed_signup">
 <form action="https://prolike.us4.list-manage.com/subscribe/post?u=9b75fd50491ee25f382ef4cb7&amp;id=be0db349ee" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
