close #277 page title revisited

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ title: Prolike
     btn_href="#why"
     btn_txt="But why?"
     btn_id="ga-why"
-    btn_href-call="/stories/"
-    btn_txt-call="Read our stories"
+    btn_href-call="/anything/"
+    btn_txt-call="Read our posts"
     btn_id_call="ga-call-home"
     title="Home Of The Yipees"
     caption="Where Young Independent Professionals
@@ -30,8 +30,8 @@ title: Prolike
     btn_txt="But how?"
     btn_id="ga-how"
     btn_id_call="ga-call-why"
-    btn_href-call="/flow/"
-    btn_txt-call="watch our flow"
+    btn_href-call="/stories/"
+    btn_txt-call="See our stories"
     title="Reinventing The Master/Apprentice Workplace"
     caption="Offering a practicum to the Yipees, we run a frank and transparent business, teaching the
     Yipees the ins and outs of being a professional consultant,
@@ -65,8 +65,8 @@ title: Prolike
     btn_id_call="ga-call-what"
     btn_href="/callme/"
     btn_txt="Contact us"
-    btn_href-call="/services/"
-    btn_txt-call="Get our services"
+    btn_href-call="/anything/how-we-work/"
+    btn_txt-call="How we work"
     title="Come And JAM With Us"
     caption="Most of our work is done on serveless JAM stacks. We impersonate the <em>gig economy</em>. All our
     projects are described as gigs. Are you a
