--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ title: Prolike
     btn_id_call="ga-call-why"
     btn_href-call="/stories/"
     btn_txt-call="See our stories"
-    title="Reinventing The Master/Apprentice Workplace"
+    title="We're reinventing the master and apprentice relationship"
     caption="Offering a practicum to the Yipees, we run a frank and transparent business, teaching the
     Yipees the ins and outs of being a professional consultant,
     freelancer, innovator or entrepreneur"
@@ -49,7 +49,7 @@ title: Prolike
     btn_txt="But what?"
     btn_href-call="/bootcamp/"
     btn_txt-call="try our bootcamp"
-    title="Quality Is Built In - Not Glued On"
+    title="Striving to make software simple and easy"
     caption="The digital transformation is real: Our deliveries are serverless, programmable
     and immutable. We provide a collaborative technology stack and
     work through a simple Kanban approach. Elders are constantly backing and mentoring the Yipees. We only invoice when
@@ -67,7 +67,7 @@ title: Prolike
     btn_txt="Contact us"
     btn_href-call="/anything/how-we-work/"
     btn_txt-call="How we work"
-    title="Come And JAM With Us"
+    title="Custom solutions for everyone, one release at a time"
     caption="Most of our work is done on serveless JAM stacks. We impersonate the <em>gig economy</em>. All our
     projects are described as gigs. Are you a
     Yipee waiting to join or a customer waiting to come
