close #369 make event page

--- a/_pages/events-signup.html
+++ b/_pages/events-signup.html
@@ -2,6 +2,16 @@
 layout: page
 ---
 <section class="events">
+    <div>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-3">
+                    <h1>Events</h1>
+                    <p>Upcoming events at Prolike</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <div id="eventbrite-widget-container-84246797439"></div>
 </section>
 
