--- a/_pages/events-signup.html
+++ b/_pages/events-signup.html
@@ -8,7 +8,7 @@ order: 7
     <div>
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-3">
+                <div class="col-8 col-lg-3">
                     <h1>Events</h1>
                     <p>Upcoming events at Prolike</p>
                 </div>
