close #375 write description for forget wordpress event

--- a/_pages/profeed-signup.html
+++ b/_pages/profeed-signup.html
@@ -14,8 +14,8 @@ layout: page
 					action="https://prolike.us4.list-manage.com/subscribe/post?u=9b75fd50491ee25f382ef4cb7&amp;id=be0db349ee"
 					method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
 					target="_blank" novalidate>
-
-					<h2>Wanna join in on the fun?</h2>
+					<img src="/images/graphic/profeed.png">
+					<h2>Sign up and recieve news about our events, offers and much more!</h2>
 
 					<div id="mc_embed_signup_scroll" class="form">
 
