close #381 remove link to bootcamp on the front page

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ title: Prolike
     btn_id_call="ga-call-how"
     btn_href="#what"
     btn_txt="But what?"
-    btn_href-call="/bootcamp/"
-    btn_txt-call="try our bootcamp"
+    btn_href-call="/events/"
+    btn_txt-call="see our events"
     title="Striving to make software simple and easy"
     caption="The digital transformation is real: Our deliveries are serverless, programmable
     and immutable. We provide a collaborative technology stack and
