close #390 set track tag on email and phone number

--- a/_pages/callme.html
+++ b/_pages/callme.html
@@ -28,9 +28,9 @@ layout: callme
                 <span class="info-text">
                     <h2>Prolike</h2>
                     <p>Allerød Stationsvej 4, 3450 Allerød</p>
-                    <a href="mailto:hey@prolike.io" data-proofer-ignore>hey@prolike.io</a>
+                    <a id="ga-callme-email" href="mailto:hey@prolike.io" data-proofer-ignore>hey@prolike.io</a>
                     <br>
-                    <a href="tel:+4520872530" data-proofer-ignore>20 87 25 30</a>
+                    <a id="ga-callme-phone" href="tel:+4520872530" data-proofer-ignore>20 87 25 30</a>
                 </span>
             </form>
         </div>
