--- a/_pages/form.html
+++ b/_pages/form.html
@@ -3,5 +3,7 @@ layout: page
 title: Website form
 ---
 <div class="container-fluid ourGoogleFormContainer">
-    <iframe class="ourGoogleForm" src="https://docs.google.com/forms/d/e/1FAIpQLSd-7bnFnbGJKKorUR1otR1qwrqz2emGCya65LEN63BZz0T1FQ/viewform?embedded=true" width="640" height="2444" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading…</iframe>
+    <iframe class="ourGoogleForm"
+        src="https://docs.google.com/forms/d/e/1FAIpQLSd-7bnFnbGJKKorUR1otR1qwrqz2emGCya65LEN63BZz0T1FQ/viewform?embedded=true"
+        width="640" height="2444" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading…</iframe>
 </div>
