close #452 revamp contact page

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ title: Prolike
     {% include components/primary.html
     btn_id="ga-showme"
     btn_id_call="ga-call-what"
-    btn_href="/callme/"
+    btn_href="/contact/"
     btn_txt="Contact us"
     btn_href-call="/anything/how-we-work/"
     btn_txt-call="How we work"
