close #453 minor spelling mistake

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: Prolike
     caption="Where Young Independent Professionals
     collaborate to deliver quality
     software features and implementations<br />
-    <b>Featuring</b>: Lean software development, Serverles, Programmable and Immutable"
+    <b>Featuring</b>: Lean software development, Serverless, Programmable and Immutable"
     %}
   </div>
 
