close #454 fix the how we work link on the frontpage

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ title: Prolike
     btn_id_call="ga-call-what"
     btn_href="/contact/"
     btn_txt="Contact us"
-    btn_href-call="/anything/how-we-work/"
+    btn_href-call="/anything/learn-how-we-work/"
     btn_txt-call="How we work"
     title="Custom solutions for everyone, one release at a time"
     caption="Most of our work is done on serveless JAM stacks. We impersonate the <em>gig economy</em>. All our
