close #461 change on the how section on our frontpage

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ title: Prolike
     btn_txt="But how?"
     btn_id="ga-how"
     btn_id_call="ga-call-why"
-    btn_href-call="/stories/"
-    btn_txt-call="See our stories"
+    btn_href-call="/anything/learn-how-we-work/"
+    btn_txt-call="How we work"
     title="We're reinventing the master and apprentice relationship"
     caption="Offering a practicum to the Yipees, we run a frank and transparent business, teaching the
     Yipees the ins and outs of being a professional consultant,
@@ -65,8 +65,8 @@ title: Prolike
     btn_id_call="ga-call-what"
     btn_href="/contact/"
     btn_txt="Contact us"
-    btn_href-call="/anything/learn-how-we-work/"
-    btn_txt-call="How we work"
+    btn_href-call="/services/"
+    btn_txt-call="our services"
     title="Custom solutions for everyone, one release at a time"
     caption="Most of our work is done on serveless JAM stacks. We impersonate the <em>gig economy</em>. All our
     projects are described as gigs. Are you a
