--- a/_pages/profeed.html
+++ b/_pages/profeed.html
@@ -5,11 +5,15 @@ layout: page
 <!-- Begin Mailchimp Signup Form -->
 
 <div class="mc">
-	<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css/" rel="stylesheet" type="text/css" data-proofer-ignore>
+	<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css/" rel="stylesheet" type="text/css"
+		data-proofer-ignore>
 	<div class="container-fluid">
 		<div class="container">
 			<div id="mc_embed_signup">
-				<form action="https://prolike.us4.list-manage.com/subscribe/post?u=9b75fd50491ee25f382ef4cb7&amp;id=be0db349ee" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+				<form
+					action="https://prolike.us4.list-manage.com/subscribe/post?u=9b75fd50491ee25f382ef4cb7&amp;id=be0db349ee"
+					method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+					target="_blank" novalidate>
 					<img alt="Profeed" src="/images/graphic/profeed.png">
 					<h2>Sign up and recieve news about our events, offers and much more!</h2>
 					<div id="mc_embed_signup_scroll" class="form">
@@ -30,17 +34,24 @@ layout: page
 							<p><strong>What are you interested in? </strong></p>
 							<ul class="subgrid">
 								<li class="check1">
-									<label for="mce-group[50667]-50667-0"><input type="checkbox" value="1" name="group[50667][1]" id="mce-group[50667]-50667-0"> Events</label>
+									<label for="mce-group[50667]-50667-0"><input type="checkbox" value="1"
+											name="group[50667][1]" id="mce-group[50667]-50667-0"> Events</label>
 								</li>
 								<li class="check2">
-									<label for="mce-group[50667]-50667-1"><input type="checkbox" value="2" name="group[50667][2]" id="mce-group[50667]-50667-1"> Software</label>
+									<label for="mce-group[50667]-50667-1"><input type="checkbox" value="2"
+											name="group[50667][2]" id="mce-group[50667]-50667-1"> Software</label>
 								</li>
 								<li class="check3">
-									<label for="mce-group[50667]-50667-2"><input type="checkbox" value="4" name="group[50667][4]" id="mce-group[50667]-50667-2"> Consulting </label>
+									<label for="mce-group[50667]-50667-2"><input type="checkbox" value="4"
+											name="group[50667][4]" id="mce-group[50667]-50667-2"> Consulting </label>
 								</li>
 								<li class="check4">
-									<label for="mce-group[50667]-50667-3"><input type="checkbox" value="8" name="group[50667][8]" id="mce-group[50667]-50667-3"> Websites</label>
+									<label for="mce-group[50667]-50667-3"><input type="checkbox" value="8"
+											name="group[50667][8]" id="mce-group[50667]-50667-3"> Websites</label>
 								</li>
+								<li><input type="checkbox" value="16" name="group[50667][16]"
+										id="mce-group[50667]-50667-4"><label for="mce-group[50667]-50667-4">Code
+										café</label></li>
 							</ul>
 						</div>
 						<div id="mce-responses" class="clear">
@@ -52,7 +63,8 @@ layout: page
 							<input type="text" name="b_9b75fd50491ee25f382ef4cb7_be0db349ee" tabindex="-1" value="">
 						</div>
 						<div class="clear submit">
-							<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+							<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
+								class="button">
 						</div>
 					</div>
 				</form>
