--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
 {% for text in site.texts %}
 {% if text.page == "front-page" %}
 
-  <div class="section front" id="home">
+  <div class="section front">
 
     <div class="row">
       <div class="col-md-10 col-lg-8 col-xl-8 col-12">
